app1-dev/templates/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: app1-dev-canary.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary
            port:
              name: http
